@@ -1,0 +1,60 @@
+<?php
+/**
+ * Show all the albums that belong to a user or group
+ *
+ * @author Cash Costello
+ * @license http://www.gnu.org/licenses/gpl-2.0.html GNU General Public License v2
+ */
+
+group_gatekeeper();
+
+$owner = elgg_get_page_owner_entity();
+if (!$owner) {
+	register_error(elgg_echo("pageownerunavailable", array(elgg_get_page_owner_guid())));
+	forward(REFERER);
+}
+
+$title = elgg_echo('album:user', array($owner->name));
+
+// set up breadcrumbs
+elgg_push_breadcrumb(elgg_echo('photos'), 'photos/all');
+elgg_push_breadcrumb($owner->name);
+
+
+$num_albums = 16;
+
+$content = elgg_list_entities(array(
+	'type' => 'object',
+	'subtype' => 'album',
+	'container_guid' => $owner->getGUID(),
+	'limit' => $num_albums,
+	'full_view' => false,
+	'list_type' => 'gallery',
+	'list_type_toggle' => false,
+	'gallery_class' => 'tidypics-gallery',
+));
+if (!$content) {
+	$content = elgg_echo('tidypics:none');
+}
+
+elgg_register_title_button();
+
+$params = array(
+	'filter_context' => 'mine',
+	'content' => $content,
+	'title' => $title,
+	'sidebar' => elgg_view('tidypics/sidebar', array('page' => 'owner')),
+);
+
+// don't show filter if out of filter context
+if ($owner instanceof ElggGroup) {
+	$params['filter'] = false;
+}
+
+if ($owner->getGUID() != elgg_get_logged_in_user_guid()) {
+	$params['filter_context'] = '';
+}
+
+$body = elgg_view_layout('content', $params);
+
+echo elgg_view_page($title, $body);
